--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
   object-fit: contain;
 }
 
-.image-indicator {
+.image-indicator-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,7 +42,7 @@
   gap:10px;
 }
 
-.image-indicator > div {
+.image-indicator-container > div {
   background-color: white;
   border: 2px solid black;
   width: 10px;
